submissions/879af64118414d9c87c24d01cc6ab081/result.txt
Compile Error:/usr/src/main.cpp:1:1: error: 'egfs' does not name a type
    1 | egfs
      | ^~~~
